feat (integration scr) - refactor validation of verified info - include service of assignment card of scr api
refs #11